--- a/markup/_layouts/about.jade
+++ b/markup/_layouts/about.jade
@@ -12,16 +12,23 @@ html(lang="en")
         include _partials/styles.jade
 
     body
-
-
         //include _partials/preloader.jade
-        //include _partials/header-form.jade
-        main
-            include _content/login-content
+        include _partials/header-log.jade
+    main
+        include _content/about-content
 
-
+        //include _partials/login-modal.jade
+        //include _partials/registration-modal.jade
         include _partials/footer.jade
         include _partials/scripts.jade
+
+
+
+
+
+
+
+
 
 
 
