#Feedback: dropdown menu, paddings players, create_team pages, my team pages color salary

--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -8,7 +8,7 @@ section.nl-section.nl-players.nl-create-team
                 div.nl-players-filter-title Filter by lEAgue:
                 div.nl-players-filter
                     div.row.align-items-center
-                        div.col-md-5
+                        div.col-md-12
                             div.owl-carousel.pl-flag
                                 div
                                     button.btn.btn-link(type="button")
@@ -22,8 +22,8 @@ section.nl-section.nl-players.nl-create-team
                                 div
                                     button.btn.btn-link(type="button")
                                         img(src="assets/img/flag/France.png" alt="France")
-                        div.col-md-7
-                            button.btn.btn-primary(type="clear") Reset Filter
+                        //div.col-md-7
+                        //    button.btn.btn-primary(type="clear") Reset Filter
                 div.nl-players-filter-title FILTER by team:
                 div.nl-players-filter-caruseul
                     div.owl-carousel.pl-teams
