--- a/markup/_layouts/_content/my-teams-content.jade
+++ b/markup/_layouts/_content/my-teams-content.jade
@@ -50,60 +50,60 @@ section.nl-section.nl-my-teams
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td.indicated
                                                 span.played.indicator
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td.indicated
                                                 span.playing.indicator
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td.indicated
                                                 span.playing.indicator
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td.indicated
                                                 span.not-playing.indicator
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                                         tr
                                             td.indicated
                                                 span.playing.indicator
                                             td Player name
                                             td D
                                             td 30
-                                            td.salary $0
+                                            td.pos $0
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -147,60 +147,60 @@ section.nl-section.nl-my-teams
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.played.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.not-playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -243,60 +243,60 @@ section.nl-section.nl-my-teams
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.played.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.not-playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                     .row
                         .col-12
                             div.nl-team-card-footer
@@ -339,60 +339,60 @@ section.nl-section.nl-my-teams
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.played.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.not-playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                                     tr
                                         td.indicated
                                             span.playing.indicator
                                         td Player name
                                         td D
                                         td 30
-                                        td.salary $0
+                                        td.pos $0
                     .row
                         .col-12
                             div.nl-team-card-footer
