--- a/markup/_layouts/_content/players-content.jade
+++ b/markup/_layouts/_content/players-content.jade
@@ -8,7 +8,7 @@ section.nl-section.nl-players
                 div.nl-players-filter-title Filter by lEAgue:
                 div.nl-players-filter
                     div.row.align-items-center
-                        div.col-md-5
+                        div.col-md-12
                             div.owl-carousel.pl-flag
                                 div
                                     button.btn.btn-link(type="button")
@@ -22,8 +22,8 @@ section.nl-section.nl-players
                                 div
                                     button.btn.btn-link(type="button")
                                         img(src="assets/img/flag/France.png" alt="France")
-                        div.col-md-7
-                            button.btn.btn-primary(type="clear") Reset Filter
+                        //div.col-md-7
+                        //    button.btn.btn-primary(type="clear") Reset Filter
 
 
                 div.nl-players-filter-title FILTER by team:
@@ -123,9 +123,9 @@ section.nl-section.nl-players
                             p team : Real Madrid
                             p position: A
                             p salary: $89000
-                        div.nl-data--text
-                            p.title team formats
-                            p other details go here
+                        //div.nl-data--text
+                        //    p.title team formats
+                        //    p other details go here
                         div.nl-players-search
                             div.input-group
                                 input(type="text" class="form-control" placeholder="Search by player name")
