--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -50,7 +50,7 @@ header.nl-header-log
                         div.collapse.navbar-collapse(id="navbarSupportedContent")
                             ul.navbar-nav.mr-auto
                                 li.nav-item.dropdown
-                                    a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Sport <img src="assets/img/ball.png" alt="#">
+                                    a.nav-link.dropdown-toggle(href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") <span>Sport</span> <img src="assets/img/ball.png" alt="#">
                                     div.dropdown-menu(aria-labelledby="dropdownMenuLink")
                                         a.dropdown-item(href="#") <span>Soccer</span> <img src="assets/img/ball.png" alt="#">
                                         a.dropdown-item(href="#") <span>Football</span> <img src="assets/img/ball.png" alt="#">
@@ -76,6 +76,17 @@ header.nl-header-log
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/Spain.png">
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/Germany.png">
                                         a.dropdown-item(href="#") <img alt="" src="assets/img/flag/USA.png">
+
+
+                            div.nl-profile-mobile
+                                div.nl-profile--data
+                                    p <i class="fa fa-user-circle" aria-hidden="true"></i> Name
+                                    p balance: 1 NLC2=00345 btc
+                                    div.nl-btn-control
+                                        div.btn.btn-primary.btn-big-radius Buy NLC2
+                                        div.btn.btn-big-radius logout
+
+
 
 
 
