--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -2524,11 +2524,14 @@ tbody.collapse.show {
   min-width: 10rem;
   margin: 0.125rem 0 0;
   font-size: 0.9375rem;
-  color: #292b2c;
+  color: #fff;
   text-align: left;
   list-style: none;
-  background-color: #fff;
+  background-color: #FF9F2F;
   background-clip: padding-box; }
+  @media (max-width: 991px) {
+    .dropdown-menu {
+      margin: 0; } }
 
 .dropdown-divider {
   height: 1px;
@@ -2547,10 +2550,20 @@ tbody.collapse.show {
   white-space: nowrap;
   background: none;
   border: 0; }
+  @media (max-width: 991px) {
+    .dropdown-item {
+      font-size: 18px;
+      font-size: 1.125rem;
+      text-align: center; } }
+  @media (max-width: 991px) {
+    .dropdown-item span {
+      width: 7.5rem;
+      text-align: center;
+      display: inline-block; } }
   .dropdown-item:focus, .dropdown-item:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #ff9f2f; }
+    background-color: #CB560F; }
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
@@ -2917,7 +2930,9 @@ tbody.collapse.show {
         width: 100%;
         max-width: inherit;
         border: 0;
-        text-align: left; }
+        text-align: center;
+        font-size: 20px;
+        font-size: 1.25rem; }
         .navbar-nav li.nav-item a {
           padding: 0.625rem 1.25rem; } }
     .navbar-nav li.nav-item:nth-child(1) {
@@ -2929,6 +2944,14 @@ tbody.collapse.show {
         .navbar-nav li.nav-item:nth-child(1) .nav-link img {
           padding-left: 1.25rem;
           padding-right: 0.3125rem; }
+          @media (max-width: 991px) {
+            .navbar-nav li.nav-item:nth-child(1) .nav-link img {
+              padding: 0; } }
+        @media (max-width: 991px) {
+          .navbar-nav li.nav-item:nth-child(1) .nav-link span {
+            width: 7.5rem;
+            text-align: center;
+            display: inline-block; } }
       @media only screen and (min-width: 992px) and (max-width: 1200px) {
         .navbar-nav li.nav-item:nth-child(1) {
           width: 25%; } }
@@ -2949,15 +2972,15 @@ tbody.collapse.show {
             display: -ms-flexbox;
             display: flex;
             -webkit-box-orient: horizontal;
-            -webkit-box-direction: reverse;
-            -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
+            -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+            flex-direction: row;
             -webkit-box-align: center;
             -ms-flex-align: center;
             align-items: center;
-            -webkit-box-pack: end;
-            -ms-flex-pack: end;
-            justify-content: flex-end; }
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center; }
             .navbar-nav li.nav-item:nth-child(1) .dropdown-item img {
               margin-left: 0;
               margin-right: 1.25rem; } }
@@ -9229,7 +9252,7 @@ p {
 .nl-section h1 {
   font-size: 26px;
   font-size: 1.625rem;
-  margin-bottom: 3.125rem; }
+  margin-bottom: 1.25rem; }
 
 .loader {
   background: none repeat scroll 0 0 #ffffff;
@@ -9402,9 +9425,9 @@ p {
     letter-spacing: 0.0625rem;
     text-transform: uppercase;
     font-weight: 700; }
-    @media only screen and (max-width: 575px) {
+    @media (max-width: 991px) {
       .nl-header-log .nl-header-top--right {
-        display: block; } }
+        display: none; } }
 
 .nl-header-log .nl-logotype {
   position: relative; }
@@ -9437,6 +9460,9 @@ p {
       margin-bottom: 1.875rem;
       padding-left: 8.125rem;
       padding-right: 5rem; } }
+  @media (max-width: 767px) {
+    .nl-header-log .nl-title {
+      display: none; } }
 
 .nl-header-log .nl-profile {
   width: 30%;
@@ -9463,6 +9489,30 @@ p {
   .nl-header-log .nl-profile--data {
     -ms-flex-item-align: center;
     align-self: center; }
+  .nl-header-log .nl-profile-mobile {
+    background: #192643;
+    display: none; }
+    @media (max-width: 991px) {
+      .nl-header-log .nl-profile-mobile {
+        display: block; } }
+    .nl-header-log .nl-profile-mobile .nl-profile--data {
+      text-transform: uppercase;
+      font-size: 20px;
+      font-size: 1.25rem;
+      margin: 0 auto;
+      padding: 1.25rem 3.125rem;
+      text-align: center; }
+      .nl-header-log .nl-profile-mobile .nl-profile--data p {
+        margin: 0;
+        line-height: 2.1875rem; }
+        .nl-header-log .nl-profile-mobile .nl-profile--data p i {
+          font-size: 30px;
+          font-size: 1.875rem; }
+      .nl-header-log .nl-profile-mobile .nl-profile--data .nl-btn-control {
+        width: 100%;
+        border: 0; }
+        .nl-header-log .nl-profile-mobile .nl-profile--data .nl-btn-control .btn {
+          margin: 0 0.625rem; }
 
 .nl-header-log .nl-balance {
   width: 40%;
@@ -9538,6 +9588,8 @@ p {
     .nl-header-log a {
       margin-right: 0.0625rem; } }
   .nl-header-log a:hover {
+    color: #fff; }
+  .nl-header-log a.dropdown-item {
     color: #fff; }
 
 .nl-header-log .dropdown-menu {
@@ -10308,7 +10360,8 @@ p {
   background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
   background-size: cover;
   color: #121a31;
-  padding-bottom: 10rem; }
+  padding-bottom: 10rem;
+  padding-top: 2.5rem; }
   @media only screen and (min-width: 1367px) and (max-width: 1440px) {
     .nl-players {
       padding-left: 1.875rem;
@@ -10323,7 +10376,10 @@ p {
     font-size: 1.125rem;
     text-transform: uppercase;
     font-weight: 700;
-    margin: 2.25rem 0 1.5625rem; }
+    margin: 1.25rem 0 0.625rem; }
+    @media (max-width: 991px) {
+      .nl-players .nl-players-filter-title {
+        margin: 0.625rem 0 0.625rem; } }
   @media (max-width: 767px) {
     .nl-players .nl-players-filter .btn-link img {
       max-width: 4.375rem; } }
@@ -10337,11 +10393,14 @@ p {
     width: 100%; }
     @media (max-width: 767px) {
       .nl-players .pl-teams, .nl-players .pl-flag {
-        margin-bottom: 1.25rem; } }
+        margin-bottom: 0; } }
   .nl-players .pl-teams {
     margin-bottom: 1.25rem; }
-  .nl-players .pl-flag .owl-item {
-    line-height: 64px; }
+  .nl-players .pl-flag {
+    padding: 0;
+    max-width: 350px; }
+    .nl-players .pl-flag .owl-item {
+      line-height: 64px; }
   .nl-players .owl-item {
     line-height: 64px; }
     .nl-players .owl-item a {
@@ -10576,7 +10635,8 @@ p {
   background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
   background-size: cover;
   color: #121a31;
-  padding-bottom: 3.125rem; }
+  padding-bottom: 3.125rem;
+  padding-top: 2.5rem; }
   @media only screen and (min-width: 992px) and (max-width: 1200px) {
     .nl-my-teams {
       padding-left: 1.875rem;
@@ -10707,8 +10767,6 @@ p {
     .nl-my-teams .table .indicator {
       width: 0.9375rem;
       height: 0.9375rem; }
-    .nl-my-teams .table .salary {
-      color: #0fbf0c; }
     .nl-my-teams .table .pos {
       color: #e58607; }
   .nl-my-teams .table td:not(:first-child), .nl-my-teams .table th {
@@ -10722,7 +10780,8 @@ p {
 .nl-create-team {
   padding-left: 1.875rem;
   padding-right: 1.875rem;
-  padding-bottom: 3.125rem; }
+  padding-bottom: 3.125rem;
+  padding-top: 2.5rem; }
   @media (max-width: 991px) {
     .nl-create-team {
       padding-left: 0;
@@ -11130,7 +11189,8 @@ p {
 
 .nl-contests {
   padding-left: 1.25rem;
-  padding-right: 1.25rem; }
+  padding-right: 1.25rem;
+  padding-top: 2.5rem; }
   @media (max-width: 991px) {
     .nl-contests {
       padding-left: 0;
