--- a/markup/_scss/sections/_nl-contests.scss
+++ b/markup/_scss/sections/_nl-contests.scss
@@ -1,6 +1,7 @@
 .nl-contests {
   padding-left: calculateRem(20px);
   padding-right: calculateRem(20px);
+  padding-top: calculateRem(40px);
   @include respond-to(allsmall){
     padding-left: 0;
     padding-right: 0;
