--- a/markup/_scss/sections/_nl-players.scss
+++ b/markup/_scss/sections/_nl-players.scss
@@ -3,6 +3,7 @@
   background-size: cover;
   color: #121a31;
   padding-bottom: calculateRem(160px);
+  padding-top: calculateRem(40px);
   @include respond-to(wide-display){
     padding-left: calculateRem(30px);
     padding-right: calculateRem(30px);
@@ -19,7 +20,11 @@
     @include fontSize(18px);
     text-transform: uppercase;
     font-weight: 700;
-    margin: calculateRem(36px) 0 calculateRem(25px);
+    margin: calculateRem(20px) 0 calculateRem(10px);
+    @include respond-to(allsmall){
+      margin: calculateRem(10px) 0 calculateRem(10px);
+    }
+
   }
 
   .nl-players-filter {
@@ -46,14 +51,17 @@
     padding: 0 calculateRem(30px);
     width: 100%;
     @include respond-to(allmobile){
-      margin-bottom: calculateRem(20px);
+      margin-bottom:0;
     }
   }
   .pl-teams{
     margin-bottom: calculateRem(20px);
+
   }
 
   .pl-flag{
+    padding: 0;
+    max-width: 350px;
     .owl-item{
       line-height: 64px;
     }
@@ -274,6 +282,7 @@
       }
     }
     &--text {
+
       padding-top: calculateRem(15px);
       p {
         font-weight: 400;
