--- a/markup/_scss/sections/_change-password.scss
+++ b/markup/_scss/sections/_change-password.scss
@@ -1,28 +1,35 @@
-.login-wrapper{
-  background: url(../img/nl-slide-img.jpg) top center no-repeat;
+.change-password-wrapper{
+  background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
   background-size: cover;
+  color: #121a31;
+  padding-bottom: 10rem;
 }
-#loginSection {
-position: relative;
+#changePasswordSection {
+  position: relative;
   .block-dialog{
     min-height: 0;
   }
 
   .block-content {
     border-radius: calculateRem(8px);
+    box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
   }
   .block-header {
+
     border-top-right-radius: .3rem;
     border-top-left-radius: .3rem;
-    background-color: #fb8700;
+
+    background-color: #142d57;
     color: #fff;
-    padding: calculateRem(50px) 0;
+    margin: 0 auto;
+    padding: calculateRem(25px) 0;
     position: relative;
 
     h2 {
       margin: 0 auto;
-      font-size: calculateRem(65px);
+      font-size: calculateRem(34px);
       text-align: center;
+      color: #fb8700;
     }
     .close {
       background: url(../img/close_btn.png) no-repeat;
@@ -44,14 +51,18 @@ position: relative;
     border: none;
   }
   .block-body, .block-footer {
-    background-color: #1d2d4e;
+    background-color: #061540;
   }
 
   .block-body {
     height: 100%;
-    padding: calculateRem(72px) calculateRem(100px) 0;
+    padding: calculateRem(25px) calculateRem(100px) 0;
     @include respond-to(allsmall){
       padding: calculateRem(72px) calculateRem(20px) 0;
+    }
+    label{
+      color: #fff;
+      font-size: calculateRem(20px);
     }
     input {
       height: calculateRem(60px);
@@ -85,7 +96,8 @@ position: relative;
     }
   }
   .block-footer {
-    padding: calculateRem(58px) 0;
+    background-color: #142d57;
+    padding: calculateRem(23px) 0;
     border-bottom-right-radius: .3rem;
     border-bottom-left-radius: .3rem;
 
