--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -59,6 +59,7 @@
 @import "sections/register";
 @import "sections/about";
 
+@import "sections/change-password";
 @import "sections/nl-contests";
 
 @import "elements/nl-theme-selector";
