--- a/markup/_layouts/change_password.jade
+++ b/markup/_layouts/change_password.jade
@@ -15,10 +15,9 @@ html(lang="en")
 
 
         //include _partials/preloader.jade
-        include _partials/header-form.jade
+        include _partials/header-log.jade
         main
-            include _content/login-content
-
+            include _content/change-password-content
 
         include _partials/footer.jade
         include _partials/scripts.jade
