contact page, fix mobile menu animation

--- a/markup/_layouts/contact.jade
+++ b/markup/_layouts/contact.jade
@@ -12,9 +12,9 @@ html(lang="en")
 		include _partials/styles.jade
 
 	body
-		h1  Gulp - BrowserSync, Jade, Sass starter templates.
-		p
-			| Congrates you have done it.
-			b Happy coding.
+		include _partials/header-log.jade
+		main
+			include _content/contact
 
+		include _partials/footer.jade
 		include _partials/scripts.jade
