--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -65,6 +65,8 @@
 @import "sections/change-password";
 @import "sections/nl-contests";
 
+@import "sections/contact";
+
 @import "elements/nl-theme-selector";
 
 
