--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -11515,6 +11515,93 @@ p {
   .nl-table-responsive {
     overflow-x: auto; } }
 
+.contact-wrapper {
+  background: url(../img/nl-players-bg.jpg) center center no-repeat fixed;
+  background-size: cover;
+  color: #121a31;
+  padding-bottom: 10rem; }
+
+#contactSection {
+  position: relative; }
+  #contactSection .block-dialog {
+    min-height: 0; }
+  #contactSection .block-content {
+    border-radius: 0.5rem;
+    -webkit-box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
+    box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21); }
+  #contactSection .block-header {
+    border-top-right-radius: .3rem;
+    border-top-left-radius: .3rem;
+    background-color: #142d57;
+    color: #fff;
+    margin: 0 auto;
+    padding: 1.5625rem 0;
+    position: relative; }
+    #contactSection .block-header h2 {
+      margin: 0 auto;
+      font-size: 2.125rem;
+      text-align: center;
+      color: #fb8700; }
+    #contactSection .block-header .close {
+      background: url(../img/close_btn.png) no-repeat;
+      position: absolute;
+      top: 2.25rem;
+      right: 1.25rem;
+      height: 49px;
+      width: 49px;
+      opacity: 1;
+      outline: none; }
+      @media (max-width: 991px) {
+        #contactSection .block-header .close {
+          top: 0.625rem;
+          right: 0.625rem; } }
+  #contactSection .block-header, #contactSection .block-footer {
+    border: none; }
+  #contactSection .block-body, #contactSection .block-footer {
+    background-color: #061540; }
+  #contactSection .block-body {
+    height: 100%;
+    padding: 1.5625rem 1.875rem 0;
+    border-bottom-right-radius: .3rem;
+    border-bottom-left-radius: .3rem; }
+    @media (max-width: 991px) {
+      #contactSection .block-body {
+        padding: 1.25rem 0.625rem 0; } }
+    #contactSection .block-body .nl-contact-group-wrapper {
+      position: relative;
+      padding-left: 3.125rem; }
+      #contactSection .block-body .nl-contact-group-wrapper a {
+        text-decoration: none;
+        color: #fff;
+        margin-left: 0; }
+    #contactSection .block-body img {
+      margin-top: 0.3125rem;
+      position: absolute;
+      top: 0;
+      left: 0; }
+      #contactSection .block-body img.address-icon {
+        width: 2.0625rem;
+        height: 2rem; }
+      #contactSection .block-body img.mail-icon {
+        width: 2.0625rem;
+        height: 1.5rem; }
+    #contactSection .block-body a {
+      text-decoration: underline;
+      color: #fb8700;
+      margin-left: 15px; }
+    #contactSection .block-body p {
+      color: #fff;
+      font-size: 1.5rem;
+      line-height: 1.4; }
+
+@media (min-width: 576px) {
+  .block-dialog {
+    max-width: 45.1875rem; } }
+
+.block-backdrop.show {
+  opacity: 0.8;
+  background-color: #fff; }
+
 .mCS-nl-theme.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
   background-color: #dfdfdf; }
 
