--- a/markup/_layouts/_partials/header-log.jade
+++ b/markup/_layouts/_partials/header-log.jade
@@ -6,7 +6,7 @@ header.nl-header-log
             div.row
                 div.col-12.p-0
                     nav.navbar.navbar-toggleable-md.navbar-light.bg-faded
-                        button.navbar-toggler.navbar-toggler-right(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
+                        button.navbar-toggler.navbar-toggler-right.mob-nav-toggle(type="button"  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
                             span.navbar-toggler-icon
                         div.row.m-0
                             div.col-lg-7.nl-header-top--left
@@ -14,7 +14,7 @@ header.nl-header-log
                                     div.col-lg-2
                                         div.nl-logotype
                                             a(href="index.html")
-                                                img(src="assets/img/logotype.svg" alt="NO Limit")
+                                                img(src="assets/img/logotype.png" alt="NO Limit")
                                     div.col-lg-10.align-self-center
                                         div.nl-title The worlds first crypto fantasy sports
                             div.col-lg-5.nl-header-top--right
